@@ -1,0 +1,257 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u90558\u5e74\uff01\u6734\u8f09\u7bc4\u63a8\u51fa\u7d93\u5178R&B\u5c08\u8f2f\u300aThe One You Wanted\u300b\uff0c20\u9996\u6b4c\u66f2\u6253\u9020\u97f3\u6a02\u9a55\u50b2", "description": "\u777d\u90558\u5e74\uff01\u6734\u8f09\u7bc4\u63a8\u51fa\u7d93\u5178R&B\u5c08\u8f2f\u300aThe One You Wanted\u300b\uff0c20\u9996\u6b4c\u66f2\u6253\u9020\u97f3\u6a02\u9a55\u50b2", "url": "https://www.famechos.me/news/\u777d\u90558\u5e74\uff01\u6734\u8f09\u7bc4\u63a8\u51fa\u7d93\u5178R&B\u5c08\u8f2f\u300aThe One You Wanted\u300b\uff0c20\u9996\u6b4c\u66f2\u6253\u9020\u97f3\u6a02\u9a55\u50b2.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T20:47:43.642956+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲.html"/>
+<meta name="description" content="睽違8年！朴載範推出最新經典R&B專輯《The One You Wanted》，收錄20首動人歌曲，音樂驕傲再現。">
+
+<meta name="keywords" content="朴載範，The One You Wanted，經典R&B，音樂驕傲，睽違8年，新專輯，20首歌曲">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲.html" />
+        <meta property="og:title" content="睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲" />
+        <meta property="og:description" content="睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲" />
+        <meta property="twitter:description" content="睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違8年！朴載範推出經典R&B專輯《The One You Wanted》，20首歌曲打造音樂驕傲</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>韓國流行歌手兼饒舌歌手朴載範最近推出了一張令粉絲們引頸期盼的錄音室專輯。這張專輯名為《The One You Wanted》，共收錄20首歌曲，其中包括9首新歌和11首先前發行的單曲。</p>
+<p>朴載範在音樂試聽會上表示，自從《Everything You Wanted》以來，他一直計劃推出更多R&B專輯，但由於各種原因，這個計劃一直被推遲。他終於成功地收集了過去七年來他工作過的R&B曲目，並將它們匯集成了一張專輯。</p>
+<p>《The One You Wanted》也是他自2019年《The Road Less Traveled》以來的首張完整專輯。朴載範解釋說，這些歌曲從一開始就是為錄音室專輯而創作的。但是，如果一次發行太多歌曲，公眾就不會好好地聆聽它們。所以他先發行了專輯曲目作為單曲，並分別宣傳每一首歌曲。</p>
+<p>朴載範表示，發行一張包含20首以上歌曲的專輯在經濟上並不划算。然而，作為一名藝術家，他有一種持續發展的渴望，即使他也是自己唱片公司的CEO，他也希望保持藝術方面的東西。</p>
+<p>以下是專輯的曲目列表：</p>
+<ul>
+<li>9首新歌</li>
+<li>11首先前發行的單曲</li>
+</ul><h2>朴載範：我的音樂是我的驕傲</h2>
+<p>朴載範最近發行了一張新專輯，他表示這是他的一件自然的事情。他為這張專輯感到驕傲，認為他的團隊也可以為它感到驕傲。</p>
+<p>專輯中有三首主打歌曲：《Mayday（feat. 泰隆·威廉·格里芬）》、《Gimme A Minute（feat. 金請夏）》和《Peace of Heaven（feat. 艾索爾 of More Vision）》。朴載範認為《Mayday》是最能代表他的R&B風格的歌曲。</p>
+<p>他希望《Mayday》能成為他的經典曲目，能夠經受住時間的考驗。許多歌手隨著時間的推移會對趨勢或變得老套變得敏感，但朴載範對他的音樂有信心，這就是為什麼他現在發行一首他七年前工作過的歌曲的原因。</p>
+<p>朴載範還分享了他對公眾期待他在表演中展示他的著名六塊肌的擔憂。他知道很多人希望他在表演中炫耀自己，但他不想依靠它。他希望他的音樂能成為人們發現他的門戶。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5qs1q0KwwRQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
