@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 20:45:51 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 20:47:50 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -110,5 +110,15 @@ aespa即將推出的第五張迷你專輯預告內容已經上線，包括歌曲
 NCT成員中本悠太發表個人歌曲</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 20:45:51 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>朴載範睽違8年推出經典R&amp;B專輯
+
+韓國流行歌手兼饒舌歌手朴載範最近推出了一張令粉絲們引頸期盼的錄音室專輯。這張專輯名為《The One You Wanted》，共收錄20首歌曲，其中包括9首新歌和11首先前發行的單曲。
+
+朴載範在音樂試聽會上表示，自從《Everything You Wanted》以來，他一直計劃推出更多R&amp;B專輯，但由於各種原因，這個計劃一直被推遲。他終於成功地收集了過去七年來他工作過的R&amp;B曲目，並將它們匯集成了一張專輯。</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 20:47:50 +0800</pubDate>
 </item></channel>
 </rss>
