@@ -12,3 +12,4 @@ https://tokyocheapo.com/editorial/halloween-2024-new-rules-shibuya-shinjuku/
 https://www.koreaherald.com/view.php?ud=20241007050599
 https://www.koreaherald.com/view.php?ud=20241008050607
 https://tokyocheapo.com/living/moving-to-japan-hacks/
+https://www.koreaherald.com/view.php?ud=20241004050494
